PLANET-3578 Fix checkbox background and submit button alignment

--- a/assets/scss/components/_enform.scss
+++ b/assets/scss/components/_enform.scss
@@ -159,7 +159,6 @@
       margin-bottom: $n20;
 
       .enform-full-width-bg & {
-        background: rgba(255, 255, 255, .5);
         color: $black;
       }
 
